--- a/languages/bp-profile-field-duplicator.pot
+++ b/languages/bp-profile-field-duplicator.pot
@@ -2,10 +2,10 @@
 # This file is distributed under the same license as the BuddyPress Profile Field Duplicator package.
 msgid ""
 msgstr ""
-"Project-Id-Version: BuddyPress Profile Field Duplicator 0.1.0\n"
+"Project-Id-Version: BuddyPress Profile Field Duplicator 1.0.0\n"
 "Report-Msgid-Bugs-To: "
 "https://wordpress.org/support/plugin/bp-profile-field-duplicator\n"
-"POT-Creation-Date: 2019-05-25 18:31:50+00:00\n"
+"POT-Creation-Date: 2019-05-26 15:21:43+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -49,11 +49,15 @@ msgstr ""
 msgid "Fail to create duplicate field."
 msgstr ""
 
+#: bp-profile-field-duplicator.php:63
+msgid "%s works with BuddyPress only. Please activate BuddyPress or de-activate %s."
+msgstr ""
+
 #. Plugin Name of the plugin/theme
 msgid "BuddyPress Profile Field Duplicator"
 msgstr ""
 
-#. Author URI of the plugin/theme
+#. Plugin URI of the plugin/theme
 msgid "bhargavb.wordpress.com"
 msgstr ""
 
@@ -63,4 +67,8 @@ msgstr ""
 
 #. Author of the plugin/theme
 msgid "Bunty"
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "bhargavb.wordpress.com/about-me"
 msgstr ""
